# get-last-error

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
src/: lib.rs
tests/: bench.rs
